Added new lambda topic endpoint

--- a/serverless.yml
+++ b/serverless.yml
@@ -121,6 +121,26 @@ functions:
           - "dynamodb:Scan"
         Resource: !GetAtt PostsTable.Arn
 
+    getTopics:
+    handler: lambdas/topics.getTopics
+    name: get-topic
+    memorySize: 128 # mb
+    timeout: 5 # seconds
+    events:
+      - http:
+          path: topic/{topicId}
+          method: GET
+          cors: true
+          authorizer:
+            name: authorizer
+            arn: arn:aws:cognito-idp:us-east-1:641705050271:userpool/us-east-1_wEs0v6sha
+                
+    iamRoleStatements:
+      - Effect: "Allow"
+        Action:
+          - "dynamodb:Scan"
+        Resource: !GetAtt PostsTable.Arn
+
   createComment:
     handler: lambdas/createComment.createComment
     name: create-comment
